--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     <span></span>
     <section id="lista-pensamentos-container">
       <h3>Meu Mural</h3>
+      <section id="busca-container">
+        <input type="search" name="buscador" id="campo-busca" placeholder="O que você procura?">
+        <img class="lupa" src="assets/imagens/lupa.png" alt="">
+      </section>
       <ul id="lista-pensamentos"></ul>
       <div id="lista-vazia">
         <p id="mensagem-lista-vazia">Nada por aqui ainda, que tal compartilhar alguma ideia?</p>
